hphp/test/zend/bad/Zend/tests/heredoc_011.php
<?php

require_once 'nowdoc.inc';

class e {
    
    const E = <<<THISMUSTNOTERROR
If you DON'T see this, something's wrong.
THISMUSTNOTERROR;

};

print e::E . "\n";

?>